update LGN filter parameters

--- a/mousenet/config/data_lgn/num_neurons_per_filter.yaml
+++ b/mousenet/config/data_lgn/num_neurons_per_filter.yaml
@@ -1,8 +1,5 @@
-sON_TF1: 2650
-sON_TF2: 2650
-sOFF_TF4: 2650
-sOFF_TF15: 2650
-tOFF_TF4: 2650
-tOFF_TF15: 2650
-sONsOFF_001: 2650
-sONtOFF_001: 2650
+tOFF: 1
+sOFF: 1
+sON: 1
+sONsOFF_001: 1
+sONtOFF_001: 1
